/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

import "client_runtime.proto";

import "evaluator_runtime.proto";

import "reef_service_protos.proto";

import "evaluator_shim.proto";


option java_package = "org.apache.reef.proto";

option java_generic_services = true;

option java_generate_equals_and_hash = true;

option java_outer_classname = "REEFProtocol";

message REEFMessage {
    // Field 1 removed

    // Messages defined in client_runtime.proto
    optional JobControlProto jobControl = 2;
    // Messages defined in reef_service_protos.proto
    optional RuntimeErrorProto runtimeError = 3;
    optional JobStatusProto jobStatus = 4;
    // Messages from evaluator_runtime.proto
    optional EvaluatorControlProto evaluatorControl = 5;
    optional EvaluatorHeartbeatProto evaluatorHeartBeat = 6;
    optional EvaluatorShimControlProto evaluatorShimCommand = 7;

    // Messages from evaluator_shim.proto
    optional EvaluatorShimStatusProto evaluatorShimStatus = 8;
}